recursion.hanoi.lessons.recursion.hanoi.HanoiBoard.scala.error
HanoiBoard:3: error: '(' expected but identifier found.
  if height > 0 {
     ^HanoiBoard:8: error: illegal start of simple expression
}
^